--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   },
   "type": "module",
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.14",
     "@types/node": "24.7.0",
     "@types/react": "19.2.2",
+    "tailwindcss": "^4.1.14",
     "typescript": "5.9.3"
   }
 }
